; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/at91/extr_clk-audio-pll.c_clk_audio_pll_frac_compute_frac.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/at91/extr_clk-audio-pll.c_clk_audio_pll_frac_compute_frac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@AUDIO_PLL_ND_MAX = common dso_local global i64 0, align 8
@AUDIO_PLL_DIV_FRAC = common dso_local global i64 0, align 8
@AT91_PMC_AUDIO_PLL_FRACR_MASK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i64*, i64*)* @clk_audio_pll_frac_compute_frac to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clk_audio_pll_frac_compute_frac(i64 %0, i64 %1, i64* %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i64 %0, i64* %6, align 8
  store i64 %1, i64* %7, align 8
  store i64* %2, i64** %8, align 8
  store i64* %3, i64** %9, align 8
  %12 = load i64, i64* %6, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %4
  %15 = load i32, i32* @EINVAL, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %5, align 4
  br label %50

17:                                               ; preds = %4
  %18 = load i64, i64* %6, align 8
  store i64 %18, i64* %10, align 8
  %19 = load i64, i64* %10, align 8
  %20 = load i64, i64* %7, align 8
  %21 = call i64 @do_div(i64 %19, i64 %20)
  store i64 %21, i64* %11, align 8
  %22 = load i64, i64* %10, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %17
  %25 = load i64, i64* %10, align 8
  %26 = load i64, i64* @AUDIO_PLL_ND_MAX, align 8
  %27 = icmp uge i64 %25, %26
  br i1 %27, label %28, label %31

28:                                               ; preds = %24, %17
  %29 = load i32, i32* @EINVAL, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %5, align 4
  br label %50

31:                                               ; preds = %24
  %32 = load i64, i64* %10, align 8
  %33 = sub i64 %32, 1
  %34 = load i64*, i64** %8, align 8
  store i64 %33, i64* %34, align 8
  %35 = load i64, i64* %11, align 8
  %36 = load i64, i64* @AUDIO_PLL_DIV_FRAC, align 8
  %37 = mul i64 %35, %36
  store i64 %37, i64* %10, align 8
  %38 = load i64, i64* %10, align 8
  %39 = load i64, i64* %7, align 8
  %40 = call i64 @DIV_ROUND_CLOSEST_ULL(i64 %38, i64 %39)
  store i64 %40, i64* %10, align 8
  %41 = load i64, i64* %10, align 8
  %42 = load i64, i64* @AT91_PMC_AUDIO_PLL_FRACR_MASK, align 8
  %43 = icmp ugt i64 %41, %42
  br i1 %43, label %44, label %47

44:                                               ; preds = %31
  %45 = load i32, i32* @EINVAL, align 4
  %46 = sub nsw i32 0, %45
  store i32 %46, i32* %5, align 4
  br label %50

47:                                               ; preds = %31
  %48 = load i64, i64* %10, align 8
  %49 = load i64*, i64** %9, align 8
  store i64 %48, i64* %49, align 8
  store i32 0, i32* %5, align 4
  br label %50

50:                                               ; preds = %47, %44, %28, %14
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

declare dso_local i64 @do_div(i64, i64) #1

declare dso_local i64 @DIV_ROUND_CLOSEST_ULL(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
